@@ -1,8 +1,8 @@
 [fh]
 button-tooltip=__1__\n__2__
 tooltip-filters=__CONTROL_LEFT_CLICK__ to set filter.\n__CONTROL_RIGHT_CLICK__ to remove filter.
-tooltip-requests=__CONTROL_LEFT_CLICK__ to increase request.\n__CONTROL_RIGHT_CLICK__ to decrease request.
 tooltip-container-filters=__CONTROL_LEFT_CLICK__ to set filter.\n__CONTROL_RIGHT_CLICK__ to remove filter.\n__CONTROL_KEY_SHIFT__ + __CONTROL_LEFT_CLICK__ to set filter under all of this item.\n__CONTROL_KEY_CTRL__ + __CONTROL_LEFT_CLICK__ to set this filter on all valid slots.\n__CONTROL_KEY_CTRL__ + __CONTROL_KEY_SHIFT__ + __CONTROL_LEFT_CLICK__ to set this filter on [font=default-bold]all[/font] slots.\n(__CONTROL_KEY_SHIFT__ or __CONTROL_KEY_CTRL__) + __CONTROL_RIGHT_CLICK__ to remove this filter from all slots.
+tooltip-requests=__CONTROL_LEFT_CLICK__ to increase request by 1 stack.\n__CONTROL_RIGHT_CLICK__ to decrease request by 1 stack.\n__CONTROL_KEY_SHIFT__ + __CONTROL_LEFT_CLICK__ to increase request by 5 stacks.\n__CONTROL_KEY_SHIFT__ + __CONTROL_RIGHT_CLICK__ to decrease request by 5 stacks.\n__CONTROL_KEY_CTRL__ + __CONTROL_LEFT_CLICK__ to set request to fill container.\n__CONTROL_KEY_CTRL__ + __CONTROL_RIGHT_CLICK__ to remove request.
 filters-full=Filters full
 filters-empty=Filters empty
 requests-full=Requests full
